--- a/beers.html
+++ b/beers.html
@@ -39,7 +39,7 @@
     <link rel="preconnect" href="https://wa.me">
     <link rel="preconnect" href="https://script.google.com">
     
-    <title>Catálogo de Cervezas | El Oso</title>
+    <title>Cervezas | El Oso</title>
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
