--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@
     <meta property="og:locale" content="es_AR">
     <meta property="og:site_name" content="El Oso Cerveza Artesanal">
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="El Oso | Cerveza Artesanal Premium">
-    <meta name="twitter:description" content="Cerveza artesanal de lotes limitados. Calidad, sabor y tradición en cada botella.">
-    <meta name="twitter:image" content="https://eloso.ar/images/logo/logo-blanco.png?v=8">
-
     <!-- Geo Tags -->
     <meta name="geo.region" content="AR-B">
     <meta name="geo.placename" content="Buenos Aires">
@@ -51,7 +45,7 @@
     <link rel="preconnect" href="https://wa.me">
     <link rel="preconnect" href="https://script.google.com">
     
-    <title>El Oso Cerveza Artesanal</title>
+    <title>El Oso</title>
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
