--- a/beers.html
+++ b/beers.html
@@ -245,8 +245,8 @@
                 
                 <div class="nav-links">
                     <a href="index.html" class="nav-link">Inicio</a>
-                    <a href="beers.html" class="nav-link">Cervezas</a>
-                    <a href="sauces.html" class="nav-link active">Picantes</a>
+                    <a href="beers.html" class="nav-link active">Cervezas</a>
+                    <a href="sauces.html" class="nav-link">Picantes</a>
                     <a href="preserves.html" class="nav-link">Conservas</a>
                     <a href="combos.html" class="nav-link">Combos</a>
                     <a href="#contacto" class="nav-link">Contacto</a>
@@ -283,8 +283,8 @@
         
         <div class="mobile-menu-links">
             <a href="index.html" class="mobile-link">Inicio</a>
-            <a href="beers.html" class="mobile-link">Cervezas</a>
-            <a href="sauces.html" class="mobile-link active">Picantes</a>
+            <a href="beers.html" class="mobile-link active">Cervezas</a>
+            <a href="sauces.html" class="mobile-link">Picantes</a>
             <a href="preserves.html" class="mobile-link">Conservas</a>
             <a href="combos.html" class="mobile-link">Combos</a>
             <a href="#contacto" class="mobile-link">Contacto</a>
