--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                         </div>
                         <div class="category-info">
                             <h3>Cervezas</h3>
-                            <p>11 estilos artesanales, desde IPA hasta Stout. Lotes limitados y recetas propias.</p>
+                            <p>+10 estilos distintos de cervezas, desde IPA hasta Stout. Lotes limitados y recetas propias.</p>
                         </div>
                     </a>
                     
