--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <!-- Estilos principales -->
-    <link rel="stylesheet" href="styles.min.css?v=30">
+    <link rel="stylesheet" href="styles.min.css?v=31">
     
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -107,16 +107,6 @@
             color: var(--color-white);
             line-height: 1.6;
             -webkit-font-smoothing: antialiased;
-        }
-
-        .header {
-            position: fixed;
-            top: 0; left: 0;
-            width: 100%;
-            background-color: var(--color-black);
-            border-bottom: 1px solid var(--color-dark-gray);
-            z-index: 1000;
-            padding: 1rem 0;
         }
 
         .container {
@@ -270,6 +260,10 @@
     <meta name="google-site-verification" content="xL0bF1MF2lTpuOwKsNkd2PNiPxs-o35IuaLXh0v3slE">
 </head>
 <body>
+    <div class="shipping-banner">
+        <strong>ENVÍOS:</strong> Jueves y Viernes <strong>GRATIS</strong> en Quilmes y alrededores en compras mayores a $15.000
+    </div>
+
     <!-- Anunciador para lectores de pantalla -->
     <div id="sr-announcer" class="sr-only" aria-live="polite" aria-atomic="true"></div>
 
@@ -687,6 +681,6 @@
     </a>
 
     <!-- JavaScript optimizado -->
-    <script src="scripts.min.js?v=31"></script>
+    <script src="scripts.js?v=31"></script>
 </body>
 </html>
