--- a/index.html
+++ b/index.html
@@ -226,12 +226,41 @@
             justify-content: center;
             flex-wrap: wrap;
         }
-        
-        @keyframes spin {
-            from { transform: rotate(0deg); }
-            to { transform: rotate(360deg); }
+
+        /* BOTONES CRÍTICOS */
+        .btn {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0.875rem 1.75rem;
+            border: 1px solid var(--color-white);
+            background-color: transparent;
+            color: var(--color-white);
+            font-size: 1rem;
+            font-weight: 500;
+            text-decoration: none;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            border-radius: 4px;
+            gap: 0.5rem;
         }
 
+        .btn:hover {
+            background-color: var(--color-white);
+            color: var(--color-black);
+        }
+
+        .btn-primary {
+            background-color: var(--color-white);
+            color: var(--color-black);
+            border-color: var(--color-white);
+        }
+
+        .btn-primary:hover {
+            background-color: transparent;
+            color: var(--color-white);
+        }
+        
         /* TIPOGRAFÍA CRÍTICA */
         @font-face {
             font-family: 'Inter';
