--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Cerveza Artesanal Para Tomar En Serio</h1>
+                    <h1 class="hero-title">Cerveza Artesanal Quilmes</h1>
                     <p class="hero-subtitle">
                     Lotes chicos. Recetas propias. Venta directa desde la cervecería.<br>
                     No industrial. No masiva. Hecha como antes.
