--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
 
     <!-- Google Search Console Verification -->
     <meta name="google-site-verification" content="xL0bF1MF2lTpuOwKsNkd2PNiPxs-o35IuaLXh0v3slE">
+
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "uruxvp2ghy");
+    </script>
 </head>
 <body>
     <div class="shipping-banner">
@@ -227,7 +235,7 @@
                 <span id="cart-total">$0</span>
             </div>
             <button class="btn btn-whatsapp-checkout" id="checkout-btn">
-                <i class="fab fa-whatsapp"></i> Finalizar por WhatsApp
+                <i class="fas fa-whatsapp"></i> Finalizar por WhatsApp
             </button>
             <div style="text-align: center; margin-top: 10px;">
                 <small style="color: var(--color-light-gray);">
@@ -506,12 +514,12 @@
                         </li>
                         <li>
                             <a href="tel:+5491123495971" target="_blank" class="social-link">
-                                <i class="fab fa-whatsapp"></i> +54 9 11 2349-5971
+                                <i class="fas fa-whatsapp"></i> +54 9 11 2349-5971
                             </a>
                         </li>
                         <li>
                             <a href="https://instagram.com/elosocerveza" target="_blank" class="social-link" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i> @elosocerveza
+                                <i class="fas fa-instagram"></i> @elosocerveza
                             </a>
                         </li>
                     </ul>
@@ -532,7 +540,7 @@
 
     <!-- Botón flotante WhatsApp -->
     <a href="https://wa.me/5491123495971" class="whatsapp-float" target="_blank" aria-label="WhatsApp">
-        <i class="fab fa-whatsapp"></i>
+        <i class="fas fa-whatsapp"></i>
     </a>
 
     <!-- JavaScript optimizado -->
