--- a/beers.html
+++ b/beers.html
@@ -52,7 +52,7 @@
     <title>Cervezas | El Oso</title>
 
     <!-- Estilos principales -->
-    <link rel="stylesheet" href="styles.min.css?v=33">
+    <link rel="stylesheet" href="styles.min.css?v=34">
     
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -239,7 +239,7 @@
     </div>
 
     <!-- Página de cervezas -->
-    <main class="beers-page">
+    <main class="products-page">
         <div class="container">
             <!-- Header de página -->
             <div class="page-header editorial-header">
@@ -338,6 +338,6 @@
     </a>
 
     <!-- JavaScript optimizado -->
-    <script src="scripts.min.js?v=31"></script>
+    <script src="scripts.min.js?v=34"></script>
 </body>
 </html>
