--- a/preserves.html
+++ b/preserves.html
@@ -52,7 +52,7 @@
     <title>Conservas | El Oso</title>
     
     <!-- Estilos principales -->
-    <link rel="stylesheet" href="styles.min.css?v=33">
+    <link rel="stylesheet" href="styles.min.css?v=34">
     
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -238,7 +238,7 @@
     </div>
 
     <!-- Página de conservas -->
-    <main class="beers-page" data-category="preserves">
+    <main class="products-page" data-category="preserves">
         <div class="container">
             <!-- Header de página -->
             <div class="page-header editorial-header">
@@ -324,6 +324,6 @@
     </a>
 
     <!-- JavaScript optimizado -->
-    <script src="scripts.min.js?v=31"></script>
+    <script src="scripts.min.js?v=34"></script>
 </body>
 </html>
