--- a/preserves.html
+++ b/preserves.html
@@ -227,7 +227,7 @@
                 <span id="cart-total">$0</span>
             </div>
             <button class="btn btn-whatsapp-checkout" id="checkout-btn">
-                <i class="fab fa-whatsapp"></i> Finalizar por WhatsApp
+                <i class="fas fa-whatsapp"></i> Finalizar por WhatsApp
             </button>
             <div style="text-align: center; margin-top: 10px;">
                 <small style="color: var(--color-light-gray);">
@@ -294,12 +294,12 @@
                         </li>
                         <li>
                             <a href="tel:+5491123495971" target="_blank" class="social-link">
-                                <i class="fab fa-whatsapp"></i> +54 9 11 2349-5971
+                                <i class="fas fa-whatsapp"></i> +54 9 11 2349-5971
                             </a>
                         </li>
                         <li>
                             <a href="https://instagram.com/elosocerveza" target="_blank" class="social-link" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i> @elosocerveza
+                                <i class="fas fa-instagram"></i> @elosocerveza
                             </a>
                         </li>
                     </ul>
@@ -320,7 +320,7 @@
 
     <!-- Botón flotante WhatsApp -->
     <a href="https://wa.me/5491123495971" class="whatsapp-float" target="_blank" aria-label="WhatsApp">
-        <i class="fab fa-whatsapp"></i>
+        <i class="fas fa-whatsapp"></i>
     </a>
 
     <!-- JavaScript optimizado -->
