--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <title>El Oso | Cerveza Artesanal Quilmes</title>
     
     <!-- Estilos principales -->
-    <link rel="stylesheet" href="styles.min.css?v=34">
+    <link rel="stylesheet" href="styles.min.css?v=35">
     
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -238,7 +238,7 @@
                 <i class="fas fa-whatsapp"></i> Finalizar por WhatsApp
             </button>
             <div style="text-align: center; margin-top: 10px;">
-                <small style="color: var(--color-light-gray);">
+                <small>
                     O escribí directamente al <a href="https://wa.me/5491123495971" style="color: var(--color-gold);">+54 9 11 2349-5971</a>
                 </small>
             </div>
@@ -544,6 +544,6 @@
     </a>
 
     <!-- JavaScript optimizado -->
-    <script src="scripts.min.js?v=34"></script>
+    <script src="scripts.min.js?v=35"></script>
 </body>
 </html>
