--- a/beers.html
+++ b/beers.html
@@ -244,7 +244,7 @@
             <!-- Header de página -->
             <div class="page-header editorial-header">
                 <h1>Cervezas</h1>
-                <p class="lead">Todas nuestras cervezas artesanales</p>
+                <p class="lead">Más de 10 estilos distintos, de IPA a Stout. Recetas propias, lotes limitados y cerveza hecha como corresponde.</p>
             </div>
             
             <!-- Filtros -->
