--- a/combos.html
+++ b/combos.html
@@ -243,7 +243,7 @@
             <!-- Header de página -->
             <div class="page-header editorial-header">
                 <h1>Combos</h1>
-                <p class="lead">Packs promocionales para regalar o disfrutar.</p>
+                <p class="lead">Packs armados con lo mejor de El Oso. Para regalar, compartir o stockearse bien.</p>
             </div>
             
             <!-- Grid de productos -->
