--- a/preserves.html
+++ b/preserves.html
@@ -243,7 +243,7 @@
             <!-- Header de página -->
             <div class="page-header editorial-header">
                 <h1>Conservas</h1>
-                <p class="lead">Conservas caseras, elaborados con ingredientes naturales.</p>
+                <p class="lead">Conservas hechas en casa, con ingredientes naturales. Ideales para la picada o para resolver una comida.</p>
             </div>
             
             <!-- Grid de productos -->
