--- a/sauces.html
+++ b/sauces.html
@@ -243,7 +243,7 @@
             <!-- Header de página -->
             <div class="page-header editorial-header">
                 <h1>Picantes</h1>
-                <p class="lead">Salsas picantes artesanales, ideales para acompañar tus comidas.</p>
+                <p class="lead">Salsas picantes hechas a mano, con sabor real y picor en serio. Para acompañar comidas y subirle el carácter.</p>
             </div>
             
             <!-- Grid de productos -->
