--- a/beers.html
+++ b/beers.html
@@ -10,17 +10,17 @@
     <link rel="manifest" href="images/favicon/site.webmanifest" />
 
     <!-- Meta Description específica para catálogo -->
-    <meta name="description" content="Catálogo completo de cervezas artesanales El Oso. Filtra por estilo: IPA, Stout, Amber, Wheat, Blonde, Lager, Dubbel. Precios, descripciones y disponibilidad en tiempo real.">
+    <meta name="description" content="Cervezas artesanales El Oso. Más de 10 estilos: IPA, Stout, Blonde, Lager, Dubbel y más. Recetas propias, lotes limitados y venta directa desde Quilmes.">
 
     <!-- Keywords específicas -->
-    <meta name="keywords" content="catálogo cervezas, cerveza ipa argentina, stout artesanal, blonde ale, dubbel, cervezas premium, comprar cerveza artesanal, precios cerveza artesanal">
+    <meta name="keywords" content="cervezas artesanales quilmes, cerveza ipa argentina, stout artesanal, blonde artesanal, dubbel belga, cervecería artesanal quilmes">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://eloso.ar/beers.html">
 
     <!-- Open Graph para catálogo -->
-    <meta property="og:title" content="Catálogo Completo de Cervezas Artesanales | El Oso">
-    <meta property="og:description" content="Explora nuestra colección de cervezas artesanales premium. +10 estilos disponibles con descripciones detalladas y precios actualizados.">
+    <meta property="og:title" content="Cervezas Artesanales | El Oso Cervecería Quilmes">
+    <meta property="og:description" content="Más de 10 estilos de cerveza artesanal hechos en Quilmes. Lotes limitados, recetas propias y sabor real.">
     <meta property="og:image" content="https://eloso.ar/images/logo/logo-blanco.png?v=8">
     <meta property="og:url" content="https://eloso.ar/beers.html">
     <meta property="og:type" content="website">
@@ -49,7 +49,7 @@
     <!-- Preload para fuentes críticas -->
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v13/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2" as="font" type="font/woff2" crossorigin>
     
-    <title>Cervezas | El Oso</title>
+    <title>Cervezas Artesanales | El Oso Cervecería Quilmes</title>
 
     <!-- Estilos principales -->
     <link rel="stylesheet" href="styles.min.css?v=35">
