--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <link rel="manifest" href="images/favicon/site.webmanifest" />
 
     <!-- Meta Description mejorada -->
-    <meta name="description" content="El Oso - Cerveza artesanal Quilmes elaborada en Buenos Aires. Lotes limitados, recetas únicas y venta directa. Disfruta de nuestras Dubbel, IPA y Blonde artesanales. Envíos a todo Argentina.">
+    <meta name="description" content="El Oso es una cervecería artesanal de Quilmes, Buenos Aires. Hacemos cervezas artesanales en lotes limitados, salsas picantes y conservas sin conservantes ni químicos. Venta directa y envíos a toda Argentina.">
 
     <!-- Keywords para SEO -->
-    <meta name="keywords" content="cerveza artesanal, cerveza quilmes, salsas picantes, conservas caseras, cerveza artesanal argentina, el oso cerveza, cerveza Quilmes, ipa artesanal, dubbel, blonde ale">
+    <meta name="keywords" content="cerveza artesanal quilmes, cervecería artesanal buenos aires, cerveza artesanal argentina, cervezas artesanales, salsas picantes artesanales, conservas artesanales, el oso cervecería">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://eloso.ar/">
 
     <!-- Open Graph mejorado -->
-    <meta property="og:title" content="El Oso | Cerveza Artesanal Quilmes • Buenos Aires">
-    <meta property="og:description" content="Cerveza artesanal elaborada en lotes limitados. Recetas propias, venta directa y calidad Quilmes. ¡Descubre el sabor auténtico!">
+    <meta property="og:title" content="El Oso | Cerveza Artesanal, Picantes y Conservas">
+    <meta property="og:description" content="Cervezas artesanales en lotes limitados, picantes y conservas hechas a mano. Sin conservantes ni químicos. Desde Quilmes a toda Argentina.">
     <meta property="og:image" content="https://eloso.ar/images/logo/logo-blanco.png?v=8">
     <meta property="og:url" content="https://eloso.ar/">
     <meta property="og:type" content="website">
@@ -54,7 +54,7 @@
     <!-- Preload para imágenes críticas -->
     <link rel="preload" href="images/logo/logo.png?v=8" as="image">
 
-    <title>El Oso | Cerveza Artesanal Quilmes</title>
+    <title>El Oso Cervecería Quilmes</title>
     
     <!-- Estilos principales -->
     <link rel="stylesheet" href="styles.min.css?v=35">
