--- a/preserves.html
+++ b/preserves.html
@@ -10,17 +10,17 @@
     <link rel="manifest" href="images/favicon/site.webmanifest" />
 
     <!-- Meta Description específica para conservas -->
-    <meta name="description" content="Conservas artesanales El Oso - Mermeladas, chutneys, pickles y encurtidos naturales. Elaborados en Quilmes con frutas y verduras de estación. Perfectos para acompañar quesos, carnes y más.">
+    <meta name="description" content="Conservas artesanales El Oso: berenjenas, pepinos y chimichurri. Hechas a mano con ingredientes naturales, sin conservantes. Ideales para picadas y comidas simples.">
 
     <!-- Keywords específicas -->
-    <meta name="keywords" content="conservas artesanales, mermeladas caseras, chutneys, pickles, encurtidos, frutas en conserva, productos artesanales, quilmes">
+    <meta name="keywords" content="conservas artesanales quilmes, berenjenas en escabeche, pepinos agridulces, chimichurri artesanal, conservas sin conservantes">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://eloso.ar/preserves.html">
 
     <!-- Open Graph para conservas -->
-    <meta property="og:title" content="Conservas Artesanales | El Oso Cerveza Artesanal">
-    <meta property="og:description" content="Mermeladas, chutneys y pickles artesanales elaborados con frutas y verduras de estación. Sabor natural en cada bocado.">
+    <meta property="og:title" content="Conservas Artesanales | El Oso Cervecería Quilmes">
+    <meta property="og:description" content="Conservas hechas a mano, sin químicos ni conservantes. Clásicos para la picada y la mesa.">
     <meta property="og:image" content="https://eloso.ar/images/categories/preserves.jpg">
     <meta property="og:url" content="https://eloso.ar/preserves.html">
     <meta property="og:type" content="website">
@@ -49,7 +49,7 @@
     <!-- Preload para fuentes críticas -->
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v13/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2" as="font" type="font/woff2" crossorigin>
     
-    <title>Conservas | El Oso</title>
+    <title>Conservas Artesanales | El Oso Cervecería Quilmes</title>
     
     <!-- Estilos principales -->
     <link rel="stylesheet" href="styles.min.css?v=35">
