--- a/sauces.html
+++ b/sauces.html
@@ -10,17 +10,17 @@
     <link rel="manifest" href="images/favicon/site.webmanifest" />
 
     <!-- Meta Description específica para salsas -->
-    <meta name="description" content="Salsas artesanales El Oso - Picantes, barbacoa, aderezos y condimentos naturales. Hechas en Quilmes con ingredientes de calidad. Ideal para acompañar carnes, hamburguesas y más.">
+    <meta name="description" content="Salsas picantes artesanales El Oso. Hechas a mano en Quilmes con ingredientes naturales. Desde picor medio hasta intenso, siempre con sabor real.">
 
     <!-- Keywords específicas -->
-    <meta name="keywords" content="salsas artesanales, salsa picante, barbacoa casera, aderezos, condimentos, salsa para carnes, productos artesanales, quilmes">
+    <meta name="keywords" content="salsas picantes artesanales, salsa picante quilmes, picantes artesanales argentina, jalapeño artesanal, hot sauce artesanal">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://eloso.ar/sauces.html">
 
     <!-- Open Graph para salsas -->
-    <meta property="og:title" content="Salsas Artesanales | El Oso Cerveza Artesanal">
-    <meta property="og:description" content="Salsas picantes y condimentos artesanales hechos con ingredientes naturales. Perfectas para realzar tus comidas.">
+    <meta property="og:title" content="Salsas Picantes Artesanales | El Oso Cervecería Quilmes">
+    <meta property="og:description" content="Picantes artesanales hechos a mano, sin conservantes. Para levantar cualquier comida.">
     <meta property="og:image" content="https://eloso.ar/images/categories/sauces.jpg">
     <meta property="og:url" content="https://eloso.ar/sauces.html">
     <meta property="og:type" content="website">
@@ -49,7 +49,7 @@
     <!-- Preload para fuentes críticas -->
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v13/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2" as="font" type="font/woff2" crossorigin>
     
-    <title>Picantes | El Oso</title>
+    <title>Salsas Picantes Artesanales | El Oso Cervecería Quilmes</title>
     
     <!-- Estilos principales -->
     <link rel="stylesheet" href="styles.min.css?v=35">
