--- a/combos.html
+++ b/combos.html
@@ -10,17 +10,17 @@
     <link rel="manifest" href="images/favicon/site.webmanifest" />
 
     <!-- Meta Description específica para combos -->
-    <meta name="description" content="Combos especiales El Oso - Paquetes de cervezas, salsas y conservas artesanales. Ahorrá con nuestros combos promocionales. Perfectos para regalos o disfrute personal.">
+    <meta name="description" content="Combos El Oso con cervezas artesanales, picantes y conservas. Packs armados para regalar, compartir o stockearse bien. Todo hecho a mano, sin conservantes.">
 
     <!-- Keywords específicas -->
-    <meta name="keywords" content="combos artesanales, packs cerveza, packs picantes, regalos artesanales, combos promocionales, productos artesanales, quilmes">
+    <meta name="keywords" content="combos cerveza artesanal, packs cervezas artesanales, combos gourmet, regalos artesanales, cervecería quilmes">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://eloso.ar/combos.html">
 
     <!-- Open Graph para combos -->
-    <meta property="og:title" content="Combos Especiales | El Oso Cerveza Artesanal">
-    <meta property="og:description" content="Packs promocionales de cervezas, salsas y conservas artesanales. La combinación perfecta para disfrutar o regalar.">
+    <meta property="og:title" content="Combos Artesanales | El Oso Cervecería Quilmes">
+    <meta property="og:description" content="Packs con lo mejor de El Oso: cervezas, picantes y conservas artesanales. Ideales para regalar o disfrutar.">
     <meta property="og:image" content="https://eloso.ar/images/categories/combos.jpg">
     <meta property="og:url" content="https://eloso.ar/combos.html">
     <meta property="og:type" content="website">
@@ -49,7 +49,7 @@
     <!-- Preload para fuentes críticas -->
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v13/UcC73FwrK3iLTeHuS_fvQtMwCp50KnMa1ZL7.woff2" as="font" type="font/woff2" crossorigin>
     
-    <title>Combos | El Oso</title>
+    <title>Combos Artesanales | El Oso Cervecería Quilmes</title>
     
     <!-- Estilos principales -->
     <link rel="stylesheet" href="styles.min.css?v=35">
