--- a/sauces.html
+++ b/sauces.html
@@ -52,7 +52,7 @@
     <title>Salsas Picantes Artesanales | El Oso Cervecería Quilmes</title>
     
     <!-- Estilos principales -->
-    <link rel="stylesheet" href="styles.min.css?v=36">
+    <link rel="stylesheet" href="styles.min.css?v=38">
     
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -293,7 +293,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="tel:+5491123495971" target="_blank" class="social-link">
+                            <a href="https://wa.me/5491123495971" target="_blank" class="social-link">
                                 <i class="fas fa-whatsapp"></i> +54 9 11 2349-5971
                             </a>
                         </li>
@@ -324,6 +324,6 @@
     </a>
 
     <!-- JavaScript optimizado -->
-    <script src="scripts.min.js?v=36"></script>
+    <script src="scripts.min.js?v=38"></script>
 </body>
 </html>
