--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es-AR">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -58,7 +58,7 @@
     <title>Home | El Oso</title>
     
     <!-- Estilos principales -->
-    <link rel="stylesheet" href="style.min.css?v=2">
+    <link rel="stylesheet" href="style.min.css?v=3">
     
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -166,6 +166,7 @@
 
     <!-- Barra de características mejorada -->
     <section class="features-bar">
+        <h2 id="features-heading" class="sr-only">Características de El Oso</h2>
         <div class="feature">
             <i class="fas fa-box"></i>
             <div>
@@ -374,6 +375,6 @@
         </div>
     </footer>
 
-    <script src="script.min.js?v=2"></script>
+    <script src="script.min.js?v=3"></script>
 </body>
 </html>
