--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <title>Home | El Oso</title>
     
     <!-- Estilos principales -->
-    <link rel="stylesheet" href="style.min.css?v=7">
+    <link rel="stylesheet" href="style.min.css?v=8">
     
     <!-- Schema Markup -->
     <script type="application/ld+json">
@@ -149,8 +149,16 @@
 
     <!-- Hero section con imagen local -->
     <header class="hero" role="banner">
+        <!-- Imagen de fondo optimizada -->
+        <img src="images/banners/hero-vika.jpg?v=6" 
+            alt="Cerveza artesanal El Oso" 
+            class="hero-image"
+            loading="eager"
+            width="960"
+            height="540"
+            sizes="100vw">
         <!-- Overlay reducido para aclarar imagen -->
-        <div class="hero-overlay" style="background: rgba(0, 0, 0, 0.4);"></div>
+        <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1>EL OSO CERVEZA ARTESANAL</h1>
             <p class="hero-subtitle">Lotes chicos. Recetas propias. Venta directa desde la cervecería. No industrial. No masiva. Hecha como antes.</p>
@@ -385,6 +393,6 @@
         </div>
     </footer>
 
-    <script src="script.min.js?v=7"></script>
+    <script src="script.min.js?v=8"></script>
 </body>
 </html>
