--- a/index.html
+++ b/index.html
@@ -2367,6 +2367,10 @@
                 text-align: left;
             }
         }
+
+        .h2, h2 {
+            margin-bottom: 20px;
+        }
     </style>
     
     <!-- Schema Markup -->
@@ -2843,7 +2847,7 @@
                                     <article class="card-contacto">
                                         <div class="card-contacto--left">
                                             <div style="margin-bottom: 2rem;">
-                                                <h3><b>El Oso</b></h3>
+                                                <h2><b>El Oso</b></h2>
                                                 <div class="contacto-row">
                                                     <div class="contacto-row--left">LUNES A DOMINGOS</div>
                                                     <div class="contacto-row--right">12 - 00HS</div>
