--- a/index.html
+++ b/index.html
@@ -1455,6 +1455,7 @@
             cursor: not-allowed;
             opacity: 0.6;
             box-shadow: none;
+            z-index: 2003;
         }
 
         .checkout-btn::after {
