--- a/index.html
+++ b/index.html
@@ -3180,7 +3180,7 @@
                     this.productsGrid.innerHTML = `
                         <div style="grid-column: 1 / -1; text-align: center; padding: 60px 20px;">
                             <div style="display: inline-block; width: 40px; height: 40px; border: 3px solid rgba(255,255,255,.3); border-radius: 50%; border-top-color: #fff; animation: spin 1s ease-in-out infinite;"></div>
-                            <p style="margin-top: 15px; color: #aaa;">Cargando productos desde Google Sheets...</p>
+                            <p style="margin-top: 15px; color: #aaa;">Cargando productos...</p>
                         </div>
                     `;
 
