--- a/index.html
+++ b/index.html
@@ -2423,6 +2423,10 @@
 
         /* RESPONSIVE */
         @media (max-width: 768px) {
+            body {
+                    padding-bottom: 80px; /* Espacio para el botón */
+            }
+
             .portal-container {
                 padding: 40px 25px;
                 width: 95%;
