--- a/index.html
+++ b/index.html
@@ -1522,6 +1522,7 @@
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             border: 2px solid var(--color-white);
+            visibility: visible !important;
         }
 
         .cart-button:hover {
