--- a/index.html
+++ b/index.html
@@ -2424,8 +2424,8 @@
 
         /* RESPONSIVE */
         @media (max-width: 768px) {
-            body {
-                    padding-bottom: 80px; /* Espacio para el botón */
+            .checkout-btn {
+                margin-bottom: 80px; /* Espacio para el botón */
             }
 
             .portal-container {
