--- a/index.html
+++ b/index.html
@@ -2601,7 +2601,7 @@
         <nav class="main-sidebar--nav">
             <a href="#tienda" aria-label="Ir a la sección de tienda">Tienda</a>
             <a href="#resenas" aria-label="Ir a la sección de reseñas">Reseñas</a>
-            <a href="#somos" aria-label="Ir a la sección ¿Qué somos?">¿Qué somos?</a>
+            <a href="#somos" aria-label="Ir a la sección ¿Quiénes Somos?">¿Quiénes Somos?</a>
             <a href="#contacto" aria-label="Ir a la sección de contacto">Contacto</a>
         </nav>
     </aside>
@@ -2924,7 +2924,7 @@
             </div>
         </section>
 
-        <!-- ¿Qué somos? Section -->
+        <!-- ¿Quiénes Somos? Section -->
         <section class="home-section home-somos" id="somos">
             <div class="container">
                 <div class="home-section--left">
@@ -3038,7 +3038,7 @@
             <div class="main-footer--top">
                 <div class="columna"><a href="#tienda" aria-label="Ir a la sección de tienda">Tienda</a></div>
                 <div class="columna"><a href="#resenas" aria-label="Ir a la sección de reseñas">Reseñas</a></div>
-                <div class="columna"><a href="#somos" aria-label="Ir a la sección ¿Qué somos?">¿Qué Somos?</a></div>
+                <div class="columna"><a href="#somos" aria-label="Ir a la sección ¿Quiénes Somos?">¿Quiénes Somos?</a></div>
                 <div class="columna"><a href="#contacto" aria-label="Ir a la sección de contacto">Contacto</a></div>
             </div>
             <div class="main-footer--bottom">
