--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
         .shop-article--image img {
             width: 100%;
             transition: transform 0.5s;
-            background-color: var(--color-white);
             cursor: pointer;
+            background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
         }
 
         .shop-article:hover .shop-article--image img {
@@ -528,12 +528,12 @@
 
         .product-modal-image {
             flex: 1;
-            background: #f5f5f5;
             display: flex;
             align-items: center;
             justify-content: center;
             padding: 40px;
             min-height: 300px;
+            background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
         }
 
         .product-modal-image img {
